[metadata]
name = python-harborclient
summary = Client library for Harbor API
description-file =
    README.md
license = Apache License, Version 2.0
author = int32bit
author-email = krystism@gmail.com
home-page = http://int32bit.me
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Harbor
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    harborclient

[entry_points]
console_scripts =
    harbor = harborclient.shell:main

[wheel]
universal = 1

[pbr]
warnerrors = true
